[package]
name = "app_infrastructure"
version = "0.3.1"
edition = "2021"

[features]
default = ["config_json"]
app_tracing = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
tonic = [
    "dep:bytes",
    "dep:http",
    "dep:http-body",
    "dep:hyper",
    "dep:tonic",
    "dep:tower-layer",
    "dep:tower-service",
]
config_toml = ["config/toml"]
config_json = ["config/json"]
config_yaml = ["config/yaml"]
config_ini = ["config/ini"]
config_ron = ["config/ron"]
config_json5 = ["config/json5"]

[dependencies]
bytes = { version = "1.4", optional = true }
config = { version = "0.13", default-features = false }
http = { version = "0.2", optional = true }
http-body = { version = "0.4", optional = true }
hyper = { version = "0.14", optional = true }
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.10", optional = true }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[[example]]
name = "tracing"
required-features = ["app_tracing"]
