[package]
name = "app_infrastructure"
version = "0.5.0"
edition = "2024"

[features]
default = ["config_json"]
app_tracing = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
config_toml = ["config/toml"]
config_json = ["config/json"]
config_yaml = ["config/yaml"]
config_ini = ["config/ini"]
config_ron = ["config/ron"]
config_json5 = ["config/json5"]

[dependencies]
config = { version = "0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[[example]]
name = "tracing"
required-features = ["app_tracing"]
